<resources>
    <string name="app_name">Quicker</string>
    <string name="app_name_subtitle">for Pivotal Tracker</string>
    <string name="app_name_full">Quicker for Pivotal Tracker</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Login</string>

    <string name="title_fragment_story_details">details</string>
    <string name="title_fragment_story_comments">comments</string>

    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_undo">Undo</string>
    <string name="action_settings">Settings</string>

    <string name="headline_no_notifications">No unread notifications</string>
    <string name="headline_no_comments">No comments</string>
    <string name="headline_error">Error</string>

    <string name="msg_pull_to_refresh">Pull to refresh</string>
    <string name="msg_fetching_content">Fetching content</string>

    <string name="label_story_id">story id</string>
    <string name="label_name">name</string>
    <string name="label_description">description</string>
    <string name="label_state">state</string>
    <string name="label_story_type">story type</string>
    <string name="label_points">points</string>

    <string name="hint_empty">empty</string>
    <string name="hint_unknown">unknown</string>

    <plurals name="toast_notifications_read">
        <item quantity="one">%d notification marked read</item>
        <item quantity="other">%d notifications marked read</item>
    </plurals>
</resources>
