<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.xaethos.trackernotifier.StoryActivity"
    tools:showIn="@layout/activity_story">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/label_id"
            style="@style/Widget.Quicker.Label"
            android:layout_height="wrap_content"
            android:text="@string/label_story_id"
            app:layout_widthPercent="50%" />

        <TextView
            android:id="@+id/text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_id"
            android:hint="@string/hint_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/label_points"
            style="@style/Widget.Quicker.Label"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/label_id"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/label_id"
            android:layout_toRightOf="@id/label_id"
            android:text="@string/label_points"
            app:layout_widthPercent="50%" />

        <TextView
            android:id="@+id/text_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/label_points"
            android:layout_alignStart="@id/label_points"
            android:layout_below="@id/label_points"
            android:hint="@string/hint_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/label_name"
            style="@style/Widget.Quicker.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_id"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_name"
            android:hint="@string/hint_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/label_description"
            style="@style/Widget.Quicker.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_name"
            android:text="@string/label_description" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_description"
            android:hint="@string/hint_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </android.support.percent.PercentRelativeLayout>

</android.support.v4.widget.NestedScrollView>
