<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.xaethos.trackernotifier.StoryActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:minHeight="?attr/actionBarSize"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
            app:expandedTitleMarginTop="24dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/label_type"
                    style="@style/Widget.Quicker.Label.AppBar"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_story_type" />

                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_type"
                    android:layout_gravity="bottom"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_unknown"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_collapseMode="none" />

                <TextView
                    android:id="@+id/label_state"
                    style="@style/Widget.Quicker.Label.AppBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/label_type"
                    android:layout_toRightOf="@id/label_type"
                    android:text="@string/label_state" />

                <TextView
                    android:id="@+id/text_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/label_state"
                    android:layout_alignStart="@id/label_state"
                    android:layout_below="@id/label_state"
                    android:layout_gravity="bottom"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_unknown"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_collapseMode="none" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="@dimen/fab_margin"-->
    <!--android:src="@android:drawable/ic_dialog_email"-->
    <!--app:layout_anchor="@id/app_bar"-->
    <!--app:layout_anchorGravity="bottom|end" />-->

</android.support.design.widget.CoordinatorLayout>
